황동찬 : 엔진 기본설정

--- a/GameEngineCore/GameEngineCore.vcxproj.filters
+++ b/GameEngineCore/GameEngineCore.vcxproj.filters
@@ -2,8 +2,25 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClInclude Include="GameEngineCore.h" />
+    <ClInclude Include="GameEngineLevel.h">
+      <Filter>Object</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameEngineCore.cpp" />
+    <ClCompile Include="GameEngineLevel.cpp">
+      <Filter>Object</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Manager">
+      <UniqueIdentifier>{b6876e9c-e150-4d68-9981-79444c06742d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Object">
+      <UniqueIdentifier>{8948ff9f-0b20-40b7-9431-b9a338c01fbf}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resources">
+      <UniqueIdentifier>{48669c06-8421-4af8-a3b6-85fac25ce7d4}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
