--- a/GameEngineBase/GameEngineBase.vcxproj
+++ b/GameEngineBase/GameEngineBase.vcxproj
@@ -195,6 +195,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="GameEngineTimeEvent.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameEngineDebug.h" />
@@ -224,6 +228,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="GameEngineTime.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="GameEngineTimeEvent.h">
       <SubType>
       </SubType>
     </ClInclude>
