--- a/GameEngineContents/GameEngineContents.vcxproj
+++ b/GameEngineContents/GameEngineContents.vcxproj
@@ -167,11 +167,7 @@
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="Planet1.h">
-      <SubType>
-      </SubType>
-    </ClInclude>
-    <ClInclude Include="Planet2.h">
+    <ClInclude Include="Planet.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -184,6 +180,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="PrecompileHeader.h" />
+    <ClInclude Include="TestObject.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="TitleLevel.h">
       <SubType>
       </SubType>
@@ -194,11 +194,7 @@
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="Planet1.cpp">
-      <SubType>
-      </SubType>
-    </ClCompile>
-    <ClCompile Include="Planet2.cpp">
+    <ClCompile Include="Planet.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -215,6 +211,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="TestObject.cpp">
+      <SubType>
+      </SubType>
     </ClCompile>
     <ClCompile Include="TitleLevel.cpp">
       <SubType>
