--- a/GameEngineContents/GameEngineContents.vcxproj
+++ b/GameEngineContents/GameEngineContents.vcxproj
@@ -163,6 +163,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="AClassDefaulttest.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="DFICore.h">
       <SubType>
       </SubType>
@@ -188,8 +192,16 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="TitleLogo.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AClassDefaulttest.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="DFICore.cpp">
       <SubType>
       </SubType>
@@ -217,6 +229,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="TitleLevel.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="TitleLogo.cpp">
       <SubType>
       </SubType>
     </ClCompile>
