--- a/GameEngineCore/GameEngineCore.vcxproj.filters
+++ b/GameEngineCore/GameEngineCore.vcxproj.filters
@@ -136,6 +136,9 @@
     <ClInclude Include="GameEngineCoreWindow.h">
       <Filter>UI\SubWindow</Filter>
     </ClInclude>
+    <ClInclude Include="GameEngineSprite.h">
+      <Filter>Resources\Texture</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameEngineCore.cpp" />
@@ -269,6 +272,9 @@
     <ClCompile Include="GameEngineCoreWindow.cpp">
       <Filter>UI\SubWindow</Filter>
     </ClCompile>
+    <ClCompile Include="GameEngineSprite.cpp">
+      <Filter>Resources\Texture</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Object">
@@ -351,6 +357,5 @@
     <None Include="ThirdParty\DirectXTex\lib\x64\Release\DirectXTex.lib">
       <Filter>ThirdParty\DirectXTex\bin\Release</Filter>
     </None>
-    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
