--- a/GameEngineContents/GameEngineContents.vcxproj
+++ b/GameEngineContents/GameEngineContents.vcxproj
@@ -172,6 +172,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="EditLevel.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Planet.h">
       <SubType>
       </SubType>
@@ -204,6 +208,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="DFICore.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="EditLevel.cpp">
       <SubType>
       </SubType>
     </ClCompile>
