imgui 뷰포트로 인한 버그 수정. ui가 화면 밖으론 못나가게끔하지만 잘 돌아감

--- a/App/imgui.ini
+++ b/App/imgui.ini
@@ -4,8 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][COREWINDOW]
-ViewportPos=1002,475
-ViewportId=0x5CC2299E
+Pos=1071,280
 Size=623,405
 Collapsed=0
 
