--- a/EngineResources/Shader/Shader.vcxproj
+++ b/EngineResources/Shader/Shader.vcxproj
@@ -143,6 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <FxCompile Include="MergeShader.hlsl" />
     <FxCompile Include="TextureShader.hlsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
