gui 기본 세팅중

--- a/App/imgui.ini
+++ b/App/imgui.ini
@@ -4,8 +4,14 @@ Size=400,400
 Collapsed=0
 
 [Window][COREWINDOW]
-Pos=877,225
+ViewportPos=1647,397
+ViewportId=0x5CC2299E
 Size=623,405
+Collapsed=0
+
+[Window][LEVELEDIT]
+Pos=1274,74
+Size=284,304
 Collapsed=0
 
 [Docking][Data]
