--- a/GameEngineContents/GameEngineContents.vcxproj
+++ b/GameEngineContents/GameEngineContents.vcxproj
@@ -167,6 +167,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="CenterLevel.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="ContentsEnum.h" />
     <ClInclude Include="DFICore.h">
       <SubType>
@@ -180,6 +184,7 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="MapSettingStruct.h" />
     <ClInclude Include="Planet.h">
       <SubType>
       </SubType>
@@ -208,6 +213,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BlackScreen.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="CenterLevel.cpp">
       <SubType>
       </SubType>
     </ClCompile>
