--- a/GameEngineContents/GameEngineContents.vcxproj
+++ b/GameEngineContents/GameEngineContents.vcxproj
@@ -185,6 +185,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="MapSettingStruct.h" />
+    <ClInclude Include="MyMouse.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Planet.h">
       <SubType>
       </SubType>
@@ -233,6 +237,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="EditLevel.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="MyMouse.cpp">
       <SubType>
       </SubType>
     </ClCompile>
