중앙 Cal보정 제거(미세한 오차가 되려 생김)

--- a/App/imgui.ini
+++ b/App/imgui.ini
@@ -10,9 +10,8 @@ Size=623,405
 Collapsed=0
 
 [Window][LEVELEDIT]
-ViewportPos=1990,403
-ViewportId=0xABA5369C
-Size=520,540
+Pos=15,195
+Size=489,540
 Collapsed=0
 
 [Docking][Data]
